--- a/style.css
+++ b/style.css
@@ -19,6 +19,25 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Barebones-Reg';
+  /* Add a new rule to center all the contents */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.hidden {
+  opacity: 0;
+  transform: translateY(20px); /* The element will start 20px below its final position */
+  transition: opacity 1s ease-out, transform 1s ease-out;
+}
+
+.visible {
+  opacity: 1;
+  transform: translateY(0); /* This will move the element to its final position */
+}
+
+section {
+  margin-bottom: 150px; /* Adjust this value as needed */
 }
 
 #header {
@@ -62,24 +81,201 @@ body {
   padding: 10px 20px;
 }
 
-footer {
+#home {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 20px;
+  color: white;
+  width: 80%;
+}
+
+.home-left, .home-right {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 40%;
+}
+
+#home-logo {
+  width: 80%;
+  height: auto;
+}
+
+.motto {
+  font-family: 'Barebones-Bold';
+  font-size: 2em;
+  text-align: center;
+}
+
+.blur-img {
+  position: relative; /* Make this a relative parent */
+  width: 110%; /* Increase width */
+  height: auto;
+  object-fit: contain;
+  filter: blur(8px);
+  transform: translate(0%, 20%);
+}
+
+.iphone-img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(30%, -30%);
+  width: 35%; /* Adjust to the size you prefer */
+  height: auto;
+  object-fit: contain;
+}
+
+#community {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  color: white;
+  width: 80%;
+}
+
+.community-left, .community-right {
+  width: 45%;
+}
+
+.community-left {
+  position: relative;
+}
+
+.blur-img-community {
+  position: relative;
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+  filter: blur(8px);
+}
+
+.iphone-img-community {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 70%;
+  height: auto;
+  object-fit: contain;
+}
+
+.community-right {
+  font-family: 'Barebones-Bold';
+}
+
+.community-title {
+  font-size: 3em;
+}
+
+.community-description {
+  font-size: 1.5em;
+  font-family: 'Barebones-Med';
+  color: grey;
+  margin-bottom: 20px;
+}
+
+.mini-section {
+  margin-bottom: 20px;
+}
+
+.mini-section-title {
+  font-size: 2em;
+  color: white;
+  font-family: 'Barebones-Bold';
+}
+
+.mini-section-points {
+  font-size: 1.2em;
+  color: grey;
+  font-family: 'Barebones-Med';
+  list-style: disc;
+  margin-left: 20px;
+}
+
+footer {
+  color: white;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#footer-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  max-width: 1200px; /* Set a maximum width to create space on larger screens */
+  width: 100%; /* Use the full available width on smaller screens */
+  margin-bottom: 20px;
 }
 
 #footer-left, #footer-right {
-  color: grey;
-  align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  width: 40%; /* Adjust width as needed */
+}
+
+#footer-icon {
+  width: 50px;
+  margin-bottom: 20px;
+}
+
+#footer-left a {
+  color: white;
+  text-decoration: none;
+  margin: 5px 0;
 }
 
 #email-input {
+  border: none;
+  padding: 10px;
+  border-radius: 20px;
+  width: 200px;
+  margin: 10px 0;
+}
+
+#submit-btn {
+  background-color: purple;
   color: black;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+#submit-btn:hover {
+  background-color: lightpurple; /* Adjust this to the color you prefer */
 }
 
 #hashtag {
-  color: lightgrey;
+  margin: 10px 0;
 }
+
+#social-media-links {
+  display: flex;
+  gap: 10px;
+}
+
+.social-media-icon {
+  height: 15px; /* Adjust as necessary */
+  width: auto;
+}
+
+#footer-bottom {
+  text-align: center;
+  width: 100%;
+}
+
+#copyright {
+  font-size: 0.8em;
+}
+
+
 
 #our-story, #features {
   color: white;
