--- a/style.css
+++ b/style.css
@@ -53,9 +53,12 @@ section {
   z-index: 100;
 }
 
+
+
 #logo {
   height: 70px;
   width: auto;
+  margin-right:5%
 }
 
 #navbar {
@@ -68,6 +71,7 @@ section {
   color: black;
   text-decoration: none;
   font-size: 20px;
+  margin:5%
 }
 
 #navbar a:hover {
@@ -78,7 +82,7 @@ section {
   background-color: transparent;
   border: 2px solid black;
   border-radius: 50px;
-  padding: 10px 20px;
+  margin-left:5%;
 }
 
 #home {
@@ -86,16 +90,23 @@ section {
   justify-content: space-between;
   align-items: center;
   padding: 20px;
-  color: white;
   width: 80%;
 }
-
-.home-left, .home-right {
+.home-right {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 40%;
+}
+
+.home-left {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 40%;
+  margin-top: 25%;
 }
 
 #home-logo {
@@ -195,28 +206,32 @@ section {
   list-style: disc;
   margin-left: 20px;
 }
-
+/* Changed footer width to 100%*/
 footer {
   color: white;
   padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  width:100%;
 }
 
+/* Changed max-width to make it responsive  */
 #footer-content {
   display: flex;
   justify-content: space-between;
   align-items: start;
-  max-width: 1200px; /* Set a maximum width to create space on larger screens */
+  max-width: 100%; /* Set a maximum width to create space on larger screens */
   width: 100%; /* Use the full available width on smaller screens */
   margin-bottom: 20px;
 }
 
+/* Adding padding to make it look better  */
 #footer-left, #footer-right {
   display: flex;
   flex-direction: column;
   width: 40%; /* Adjust width as needed */
+  padding:100px
 }
 
 #footer-icon {
@@ -285,13 +300,18 @@ footer {
   margin: auto;
 }
 
+/*margin useful to fix the navigation of header to different sections*/
+#featuresMarg,#storyMarg,#communityMarg{
+  margin:5%
+}
+
 #our-story h2, #features h2 {
   font-size: 3em;
   color: white;
   font-family: 'Barebones-Bold';
 }
 
-#our-story p, #features p {
+#our-story p, .upper {
   font-size: 1.5em;
   color: grey;
   margin-bottom: 20px;
@@ -310,6 +330,20 @@ footer {
   margin: 0.5%;
   aspect-ratio: 3 / 4;
 }
+/* Added new classes to be able to edit font sizes to make them distinct*/
+.card-header{
+  font-family:'Barebones-Bold';
+  color:black;
+  font-size:x-large;
+}
+
+
+.card p{
+  color:grey;
+  font-family: 'Barebones-Med';
+  font-size:large;
+  
+}
 
 .card {
   background: white;
@@ -317,6 +351,8 @@ footer {
   padding: 20px;
   box-sizing: border-box;
   border-radius: 10px;
+  
+
 }
 
 .story img, .card img {
@@ -357,11 +393,13 @@ footer {
   visibility: hidden;
 }
 
+
 /* Responsive layout - makes the menu and the content stack on top of each other */
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   #header {
     flex-direction: column;
     height: auto;
+    
   }
 
   #logo {
@@ -390,4 +428,19 @@ footer {
     width: 90%;
     margin: 5% auto;
   }
+  .card p{
+    color:grey;
+    font-family: 'Barebones-Med';
+    font-size:x-large;
+    
+  }
+  #home {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    width: 80%;
+    margin-top: 25%;
+  }
+  
 }
