--- a/style.css
+++ b/style.css
@@ -54,31 +54,35 @@ section {
 }
 
 #logo {
-  height: 70px;
+  height: 50px;
   width: auto;
 }
 
 #navbar {
   display: flex;
   justify-content: space-around;
-  width: 50%;
+  width: 65%;
+  font-family: 'Barebones-Bold';
+  
 }
 
 #navbar a {
   color: black;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 27px;
 }
 
 #navbar a:hover {
-  color: purple;
+  color: #cf04fe;
 }
 
 #launch-btn {
   background-color: transparent;
-  border: 2px solid black;
-  border-radius: 50px;
+  border: 2px solid #cf04fe;
+  border-radius: 60px;
   padding: 10px 20px;
+  font-family: 'Barebones-Bold';
+  color: #cf04fe;
 }
 
 #home {
@@ -88,6 +92,7 @@ section {
   padding: 20px;
   color: white;
   width: 80%;
+  margin-top: 50px; /* adjust this value to increase/decrease space */
 }
 
 .home-left, .home-right {
@@ -105,8 +110,9 @@ section {
 
 .motto {
   font-family: 'Barebones-Bold';
-  font-size: 2em;
-  text-align: center;
+  font-size: 2.1em;
+  text-align: left;
+  margin-top: 300px; /* adjust this value to move the motto up or down */
 }
 
 .blur-img {
@@ -135,6 +141,7 @@ section {
   padding: 20px;
   color: white;
   width: 80%;
+  margin-top: 150px;
 }
 
 .community-left, .community-right {
@@ -207,27 +214,44 @@ footer {
 #footer-content {
   display: flex;
   justify-content: space-between;
-  align-items: start;
+  align-items: flex-start; /* aligns the start of the left and right footers */
   max-width: 1200px; /* Set a maximum width to create space on larger screens */
   width: 100%; /* Use the full available width on smaller screens */
   margin-bottom: 20px;
 }
 
-#footer-left, #footer-right {
+#footer-left {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  width: 100%; /* Adjust width as needed */
+  margin-right: 50px;
+}
+
+#footer-right {
   display: flex;
   flex-direction: column;
   width: 40%; /* Adjust width as needed */
+  margin-left: 420px;
 }
 
 #footer-icon {
   width: 50px;
-  margin-bottom: 20px;
 }
 
 #footer-left a {
   color: white;
   text-decoration: none;
-  margin: 5px 0;
+  margin: 0 10px;
+}
+
+.logo-container {
+  margin-bottom: 500px; /* Add space between the logo and the links */
+}
+
+.links-container {
+  display: flex;
+  flex-direction: row;
 }
 
 #email-input {
@@ -239,8 +263,8 @@ footer {
 }
 
 #submit-btn {
-  background-color: purple;
-  color: black;
+  background-color: #cf04fe;
+  color: white;
   border: none;
   padding: 10px 20px;
   border-radius: 20px;
@@ -249,7 +273,7 @@ footer {
 }
 
 #submit-btn:hover {
-  background-color: lightpurple; /* Adjust this to the color you prefer */
+  background-color: black; /* Adjust this to the color you prefer */
 }
 
 #hashtag {
@@ -275,9 +299,17 @@ footer {
   font-size: 0.8em;
 }
 
+/* existing code */
+#our-story {
+  color: white;
+  padding: 20px;
+  text-align: left;
+  max-width: 70%;
+  margin: auto;
+  margin-bottom: 300px;
+}
 
-
-#our-story, #features {
+#features {
   color: white;
   padding: 20px;
   text-align: left;
@@ -286,17 +318,39 @@ footer {
 }
 
 #our-story h2, #features h2 {
-  font-size: 3em;
+  font-size: 2.8em;
   color: white;
   font-family: 'Barebones-Bold';
 }
 
-#our-story p, #features p {
+#our-story p{
   font-size: 1.5em;
   color: grey;
   margin-bottom: 20px;
   font-family: 'Barebones-Med';
 }
+
+.features-description {
+  font-size: 1.5em;
+  font-family: 'Barebones-Med';
+  color: grey;
+  margin-bottom: 20px;
+}
+
+.features-card-description {
+  font-size: 1.1em;
+  color: grey;
+
+  font-family: 'Barebones-Med';
+}
+
+#features h3 {
+  font-size: 1.4em;
+  color: black;
+  margin-bottom: 20px;
+  font-family: 'Barebones-Med';
+}
+
 
 #story-images, .card-container {
   display: flex;
@@ -304,33 +358,23 @@ footer {
   flex-wrap: wrap;
 }
 
-.story, .card {
+/* updated code */
+.story {
   position: relative;
-  width: 30%;
+  width: 250px; /* adjust the size as needed */
+  height: 250px; /* adjust the size as needed */
   margin: 0.5%;
-  aspect-ratio: 3 / 4;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 50%;
+  overflow: hidden;
 }
 
-.card {
-  background: white;
-  color: black;
-  padding: 20px;
-  box-sizing: border-box;
-  border-radius: 10px;
-}
-
-.story img, .card img {
-  width: 100%;
-  height: 100%;
+.story img {
   object-fit: cover;
-}
-
-.name {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
+  min-width: 100%;
+  min-height: 100%;
 }
 
 .overlay {
@@ -353,8 +397,34 @@ footer {
   opacity: 1;
 }
 
-.story:hover .name {
-  visibility: hidden;
+.story h3 {
+  position: absolute;
+  bottom: 10px; /* adjust as needed */
+  color: white;
+  text-align: center;
+  width: 100%;
+}
+
+/* existing code for .card and related styles */
+.card {
+  position: relative;
+  background: white;
+  color: black;
+  padding: 20px;
+  box-sizing: border-box;
+  border-radius: 10px;
+  width: 30%;
+  margin: 0.5%;
+  padding-bottom: 5%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 /* Responsive layout - makes the menu and the content stack on top of each other */
