--- a/style.css
+++ b/style.css
@@ -69,7 +69,8 @@ section {
 #navbar a {
   color: black;
   text-decoration: none;
-  font-size: 27px;
+  font-size: 25px;
+  margin: 2%
 }
 
 #navbar a:hover {
@@ -95,12 +96,20 @@ section {
   margin-top: 50px; /* adjust this value to increase/decrease space */
 }
 
-.home-left, .home-right {
+.home-right {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 40%;
+}
+.home-left{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 55%;
+  background-color: red;
 }
 
 #home-logo {
@@ -110,7 +119,7 @@ section {
 
 .motto {
   font-family: 'Barebones-Bold';
-  font-size: 2.1em;
+  font-size: 2.0em;
   text-align: left;
   margin-top: 300px; /* adjust this value to move the motto up or down */
 }
@@ -427,21 +436,21 @@ footer {
 }
 
 /* Responsive layout - makes the menu and the content stack on top of each other */
-@media (max-width: 600px) {
+@media (max-width: 700px) {
   #header {
     flex-direction: column;
     height: auto;
+    
   }
 
   #logo {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
   }
 
   #navbar {
     width: 100%;
     justify-content: space-evenly;
   }
-
   #launch-btn {
     margin-top: 10px;
   }
