Changed background of C-Suite names to make them more readable

--- a/style.css
+++ b/style.css
@@ -411,6 +411,7 @@ footer {
   color: white;
   text-align: center;
   width: 100%;
+  background-color: gray;
 }
 
 /* existing code for .card and related styles */
