--- a/style.css
+++ b/style.css
@@ -12,6 +12,29 @@
   font-family: 'Barebones-Med';
   src: url('Shape-Medium.otf') format('opentype');
 }
+/* Styling to make list not appear initially*/
+.testClass{
+  list-style-type:none;
+  flex-direction:column;
+  color: black;
+  text-decoration: none;
+  font-size: 25px;
+  display:none
+  
+}
+label{
+  color: black;
+  text-decoration: none;
+  font-size: 25px;
+  display:none
+ 
+  
+}
+
+#menu-bar{
+  display:none
+}
+
 
 body {
   background-color: black;
@@ -106,9 +129,11 @@ section {
 .home-left{
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   width: 55%;
+  background-color: red;
+
   
 }
 
@@ -443,15 +468,32 @@ footer {
     height: auto;
     
   }
+  label{
+    display:flex
+  }
+
 
   #logo {
     margin-bottom: 5px;
   }
-
+  #navbar a{
+    display: none;
+  }
+  #logo:hover  {
+   background-color:red;
+  }
   #navbar {
     width: 100%;
     justify-content: space-evenly;
   }
+
+  #menu-bar:checked ~ .testClass{
+    display:flex;
+    
+  }
+
+
+
   #launch-btn {
     margin-top: 10px;
   }
