re-aligned the dropdown menu and added a hover feature to see what menu item will be clicked

--- a/style.css
+++ b/style.css
@@ -492,10 +492,13 @@ footer {
 
   #menu-bar:checked ~ .testClass{
     display:flex;
-    align-items:center;
+    align-items:left;
+    text-align:center;
+    margin-right: 5%;
   }
-  .smallScreen:hover{
-    background-color: rgb(180, 180, 180);
+  .testClass li:hover{
+    background-color: rgb(180,180,180);
+    border-radius: 2%;
   }
 
   
