--- a/style.css
+++ b/style.css
@@ -290,7 +290,7 @@ footer {
 }
 
 #submit-btn {
-  background-color: purple;
+  background-color: #cf04fe;
   color: black;
   border: none;
   padding: 10px 20px;
@@ -300,7 +300,7 @@ footer {
 }
 
 #submit-btn:hover {
-  background-color: lightpurple; /* Adjust this to the color you prefer */
+  background-color: #cf04fe; /* Adjust this to the color you prefer */
 }
 
 #hashtag {
@@ -371,7 +371,7 @@ footer {
 .features-description {
   font-size: 1.5em;
   font-family: 'Barebones-Med';
-  color: grey;
+  color: white;
   margin-bottom: 20px;
 }
 
@@ -399,9 +399,9 @@ footer {
 /* updated code */
 .story {
   position: relative;
-  width: 280px; /* adjust the size as needed */
-  height: 280px; /* adjust the size as needed */
-  margin: 0.5%;
+  width: 225px; /* adjust the size as needed */
+  height: 225px; /* adjust the size as needed */
+  margin: .5%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -429,10 +429,18 @@ footer {
   width: 100%;
   background-color: gray;
 }
-.CSuiteTitles{
+.CSuiteTitles h4{
   text-align: center;
   align-items: center;
-  background-color: red;
+  color:white;
+  
+  margin-top: -20px;
+}
+.CSuiteTitles h3{
+  text-align: center;
+  align-items: center;
+  color:#cf04fe;
+  
 }
 
 
